# colatiger-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  Jenkinsfile  Makefile  README.md  config.toml
config/: default.toml  dev.toml
src/: conf.rs  config.rs  lib.rs  main.rs
src/common/: conf.rs  mod.rs  page.rs  resp.rs
src/common/utils/: file_utils.rs
src/core/: custom_layer.rs  db.rs  err.rs  mod.rs  response.rs
src/db/: milvus_db.rs  mod.rs  postgres.rs  redis.rs  s3.rs
src/entities/: mod.rs  oss.rs  users.rs
src/entity/: mod.rs  users.rs
src/llm/: clip.rs
src/middleware/: snowflake.rs
src/models/: vector.rs
src/req/: vector.rs
src/routers/: auth.rs  health.rs  init.rs  milvus.rs  mod.rs
src/routers/auth/: api.rs  handler.rs  mod.rs  model.rs
src/routers/health/: api.rs  handler.rs  mod.rs
src/routers/llm/: api.rs  handler.rs  mod.rs
src/routers/oss/: api.rs  handler.rs  mod.rs  model.rs  remote.rs  service.rs
src/routers/vector/: api.rs  entity.rs  handler.rs  http_client.rs  milvus.rs  mod.rs  service.rs
