[package]
name = "colatiger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-valid = "0.11.0"
config = "0.13.3"
dotenv = "0.15.0"
idgenerator = "2.0.0"
lazy_static = "1.4.0"
milvus-sdk-rust = "0.1.0"
rand = "0.8.5"
serde = {version ="1.0.192",features=["derive"]}
snafu = "0.7.5"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"


