[package]
name = "colatiger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-valid = "0.11.0"
config = "0.13.3"
dotenv = "0.15.0"
hyper = "0.14.27"
idgenerator = "2.0.0"
milvus-sdk-rust = "0.1.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rust-s3 = "0.33.0"
serde = {version ="1.0.192",features=["derive"]}
serde_json = "1.0.108"
snafu = "0.7.5"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


